--- a/CSS.css
+++ b/CSS.css
@@ -4,7 +4,7 @@ Página realizada por Diego López Navas
 
 html{
     height: 100%;
-    
+    overflow: hidden;
     background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
 }
 
