--- a/CSS.css
+++ b/CSS.css
@@ -4,6 +4,8 @@ Página realizada por Diego López Navas
 
 html{
     height: 100%;
+    /*background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);*/
+    background: #1b2735;
 }
 
 #stars{
