--- a/CSS.css
+++ b/CSS.css
@@ -608,11 +608,12 @@ html{
 
 
 .neon{
+    margin-top: 15vh;
     position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 30vh;
+    padding-top: 20vh;
     padding-bottom: 10vh;
     left: 50%;
     transform: translate(-50%, -35%);
